apps/clubs/dci/nodered/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dci-nodered
spec:
  virtualhost:
    fqdn: nodered-summercamp2026.etsmtl.club
    tls:
      secretName: dci-nodered-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      requestHeadersPolicy:
        set:
          - name: X-Forwarded-Proto
            value: "%REQ(:scheme)%"
          - name: X-Forwarded-Host
            value: "%REQ(:authority)%"
      services:
        - name: dci-nodered
          port: 80
